# django-lokdown

./: .flake8  .gitignore  MANIFEST.in  README.md  api_schema.json  generate_docs.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: auto_environment_pr.yml  beta_branch_protection.yml  build.yml  ci.yml  code-check.yaml  discord_notify.yml  post_checksum.yml  promote_to_beta.yml  promote_to_stable.yml  stable_branch_protection.yml
configuration/: disabled_ssl_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
example/: README.md  api_schema.json  manage.py
example/devsite/: asgi.py  auth_views.py  disabled_ssl_settings.py  settings.py  socialauth_settings.py  urls.py  wsgi.py
example/templates/devsite/: auth_callback.html
example/tester/: apps.py
lokdown/: README.md  __init__.py  admin.py  admin_auth.py  admin_url_override.py  apps.py  authentication.py  checks.py  models.py  serializers.py  spectacular_extensions.py  urls.py  views.py
lokdown/control/: api_key_controller.py  auth_controller.py  backup_code_controller.py  passkey_controller.py  socialauth_controller.py  token_controller.py  token_views.py  totp_controller.py  twofa_controller.py
lokdown/docs/: AUTHENTICATION.md
lokdown/helpers/: api_key_helper.py  api_key_settings_helper.py  auth_flow_helper.py  backup_codes_helper.py  encryption_helper.py  feature_settings_helper.py  passkey_helper.py  rate_limit_helper.py  request_auth_helper.py  session_helper.py  totp_helper.py  twofa_helper.py  webauthn_settings_helper.py
lokdown/management/commands/: security_audit.py
lokdown/migrations/: 0001_initial.py  0002_usertimebasedonetimepasswords_pending_totp_secret.py  0003_encrypt_totp_secrets_and_hash_backup_codes.py  0004_userapikey.py
lokdown/serializers/: __init__.py  api_key.py  auth.py  backup.py  models.py  passkey.py  socialauth.py  totp.py
lokdown/socialauth/: __init__.py  adapters.py  callback_url.py  middleware.py  providers.py  settings_helper.py  urls.py
lokdown/templates/: 2fa_backup_codes.html  2fa_setup.html  2fa_setup_passkey.html  2fa_setup_totp.html  2fa_verify.html  backup_codes_display.html  security_dashboard.html
lokdown/tests/: conftest.py  settings.py  test_admin_auth.py  test_api_key_authentication.py  test_checks.py  urls.py
lokdown/tests/control/: test_api_key_controller.py  test_auth_controller.py  test_backup_code_controller.py  test_passkey_controller.py  test_socialauth_controller.py  test_token_controller.py  test_totp_controller.py  test_twofa_controller.py
lokdown/tests/helpers/: test_api_key_helper.py  test_api_key_settings_helper.py  test_auth_flow_helper.py  test_backup_codes_helper.py  test_encryption_helper.py  test_feature_settings_helper.py  test_passkey_helper.py  test_rate_limit_helper.py  test_request_auth_helper.py  test_session_helper.py  test_totp_helper.py  test_twofa_helper.py  test_webauthn_settings_helper.py
lokdown/tests/management/: test_security_audit.py
lokdown/tests/socialauth/: test_adapters.py  test_callback_url.py  test_checks.py  test_checks_no_allauth.py  test_init_exports.py  test_integration.py  test_middleware.py  test_providers.py  test_settings_helper.py  test_urls.py
tester/: apps.py
