[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-lokdown"
version = "1.0.0"
description = "Reusable Django app for TOTP and WebAuthn two-factor authentication"
readme = "README.md"
authors = [
    { name = "Loknus Labs LLC", email = "loknuslabs@gmail.com" }
]
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
keywords = ["django", "2fa", "totp", "webauthn", "passkey", "authentication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]
dependencies = [
    "Django>=5.1",
    "django-ratelimit>=4.1.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.28.0",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "webauthn>=2.6.0",
    "Pillow>=11.3.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "django-cors-headers>=4.7.0",
    "black==26.5.1",
    "flake8>=7.3.0",
    "pytest>=8.4.0",
    "pytest-django>=4.11.0",
    "pip-audit>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/loknuslabs/django-lokdown"
Documentation = "https://github.com/loknuslabs/django-lokdown#readme"
Repository = "https://github.com/loknuslabs/django-lokdown"

[tool.setuptools.packages.find]
where = ["."]
include = ["lokdown*"]
exclude = ["example*", "tests*", "*.tests*", ".github*"]

[tool.setuptools.package-data]
lokdown = ["templates/**/*", "migrations/**/*.py"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py313']
