[build-system]
requires = ["setuptools>=82.0.0", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-lokdown"
version = "1.3.0"
description = "Reusable Django app for TOTP and WebAuthn two-factor authentication"
readme = "lokdown/README.md"
authors = [
    { name = "Loknus Labs LLC", email = "loknuslabs@gmail.com" }
]
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
keywords = ["django", "2fa", "totp", "webauthn", "passkey", "authentication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]
dependencies = [
    "Django>=6.0.6",
    "django-ratelimit>=4.1.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "webauthn>=2.7.1",
    "Pillow>=12.2.0",
    "cryptography>=48.0.0",
    "django-allauth[headless]>=65.18.0",
]

[project.optional-dependencies]
dev = [
    "django-cors-headers>=4.9.0",
    "black==26.5.1",
    "flake8>=7.3.0",
    "mypy>=1.19.0",
    "django-stubs>=5.2.0",
    "djangorestframework-stubs>=3.16.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "pip-audit>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/loknuslabs/django-lokdown"
Documentation = "https://github.com/loknuslabs/django-lokdown#readme"
Repository = "https://github.com/loknuslabs/django-lokdown"

[tool.setuptools.packages.find]
where = ["."]
include = ["lokdown"]
exclude = ["lokdown.tests*", "example*", "tests*", "*.tests*", ".github*"]

[tool.setuptools.package-data]
lokdown = ["templates/**/*", "migrations/**/*.py"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
files = ["lokdown"]
exclude = "^(lokdown/(migrations|tests)/)"
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "allauth.*",
    "django_ratelimit.*",
    "drf_spectacular.*",
    "pyotp.*",
    "qrcode.*",
    "webauthn.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "lokdown.tests.settings"
